7901 Devices that do not support setting WC keep generating ereports Reviewed by: Yuri Pankov <yuri.pankov@nexenta.com> Reviewed by: Dan Fields <dan.fields@nexenta.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>